# corona

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  RU_LICENSE  all_8h_source.html  annotated.html  annotated_dup.js  base_8h_source.html  build.py  call__every_8hh_source.html  checksum_8hh_source.html  circular__reveal_8c_09_09_source.html  circular__reveal_8h_source.html  classapplication_1_1Base-members.html  classapplication_1_1Base.html  classapplication_1_1Base__inherit__graph.map  classapplication_1_1Base__inherit__graph.md5  classapplication_1_1Corona-members.html  classapplication_1_1Corona.html  classapplication_1_1Corona__coll__graph.map  classapplication_1_1Corona__coll__graph.md5  classapplication_1_1Corona__inherit__graph.md5  classconfig_1_1Config-members.html  classconfig_1_1Config.html  classconfig_1_1ConfigQMLWrapper-members.html  classconfig_1_1ConfigQMLWrapper.html  classconfig_1_1ConfigQMLWrapper__inherit__graph.map  classconfig_1_1ConfigQMLWrapper__inherit__graph.md5  classcorona_1_1image_1_1Metadata-members.html  classcorona_1_1image_1_1Metadata.html  classcorona_1_1image_1_1Metadata.js  classcorona_1_1image_1_1Metadata__coll__graph.md5  classcorona_1_1image_1_1Metadata__inherit__graph.map  classcorona_1_1image_1_1decoding__error-members.html  (+307 more)
.gitlab/: alse.yml  doxygen.yml  win64.yml
cmake/: corona-config.cmake.in
conan/profiles/: mingw_windows_x86_64  msvc_windows_x86_64
doxygen/: header.html
include/corona/: config.h
include/corona/debug/: interface_drawable.h
include/corona/detail/: export.h  logging.h
include/corona/image/: error.h  metadata.h
include/corona/image/metadata/: exif_metadata.h
include/corona/imgui/: all.h  detail.h  interface_drawable.h  palette.h  text.h  tree.h
include/corona/misc/: geo.h
include/corona/network/: class_network_api.h  class_udp_socket.h  interface_socket.h
include/corona/network/detail/: addr.h  ipv4.h
include/corona/network/modules/: class_powerswitch.h
modules/geoservice/: CMakeLists.txt  conanfile.py
modules/geoservice/cmake/: corona-bootstrap-geoservice-config.cmake.in
modules/geoservice/doxygen/: header.html
modules/geoservice/include/corona/modules/: formatters.h
modules/geoservice/src/geoservice/: cgs_plugin.json  class_config.cc  class_geotiledreplymap.cc  class_geotiledreplymap.hh  class_geotilefetchermap.cc  class_geotilefetchermap.hh  class_mapping_manager_engine.cc  class_mapping_manager_engine.hh  import.cc  parameters.hh  plugin.cc  plugin.hh
modules/imgui-renderer/: CMakeLists.txt  conanfile.py
modules/imgui-renderer/qml/: qdebugenv_qml.qrc
modules/imgui-renderer/shaders/: imgui.vert
modules/imgui-renderer/src/: class_extendable_renderer.cc  class_generic_renderer.cc
modules/imgui-renderer/src/rhi/: class_immediate_gui_bridge.cc  class_renderer.cc
modules/imgui-wrapper/: CMakeLists.txt
modules/imgui-wrapper/cmake/: imgui_wrapper-config.cmake.in
modules/qmlbind/: .clang-tidy  CMakeLists.txt
modules/qmlbind/include/corona/modules/qmlbind/: literals.h  qmlbind.h
modules/qmlbind/include/corona/modules/qmlbind/detail/: export.h
resources/: resources.qrc  windows_metafile.rc.in
resources/configuration/: config.yaml
resources/osmconfigs/: cycle  hiking  night-transit  satellite  street  terrain  transit
resources/theme/: gruvbox.json  gruvbox.toml
scripts/network/modules/powerswitch/: udp_reader.py  udp_server.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  (+21 more)
src/: config.cc
src/c++/: afx  corona  corona.c++  corona.h  def.h  main.c++
src/c++/application/: base.h  corona.c++  corona.h
src/c++/config/: config.c++  config.h  configqmlwrapper.c++  configqmlwrapper.h
src/c++/global/: definitions.h  expected.h  log.h  type_aliases.h
src/c++/gui/theme/: circular_reveal.c++  circular_reveal.h  theme.c++  theme.h  themeprovider.c++  themeprovider.h  themeqmlwrapper.c++  themeqmlwrapper.h
src/c++/launcher/: application_base.h  launcher.h  launcher.ixx  launcher_base.h  logconfig.c++  logconfig.h  logconfig.ixx  project_info.h  projectinfo.h  projectinfo.ixx  qapplication_selector.h  qtlogginghandler.c++  qtlogginghandler.h  qtlogginghandler.ixx  qtquickoptions.h  qtquickoptions.ixx
src/c++/map/provider/: openstreetmapprovider.c++  openstreetmapprovider.h  provider.ixx  providerqml.c++  providerqml.h
src/c++/map/utils/: geomath.c++  geomath.h  orthodrom.c++  orthodrom.h
src/c++/network/: localaddr.c++  localaddr.h
src/c++/network/modules/: powerswitch.c++  powerswitch.h
src/image/: metadata.cc
src/image/metadata/: exif.hh
src/js/: FileExtensions.js  js.qrc
src/misc/: geo.cc
src/private/misc/: call_every.hh  rotating_debug_buffer.hh  socket_debug.hh
src/private/network/: addr.cc  class_network_api.cc  class_udp_socket.cc  class_udp_socket_p.hh  class_udpsocket.cc  class_udpsocket.hh  ipv4.cc
src/private/network/modules/: class_powerswitch.cc  class_powerswitch_p.hh
src/qml/: Main.qml  qml.qrc
src/qml/layouts/: DebugNetworkPanel.qml  MapView.qml  MenuApplicationBar.qml
src/qml/layouts/map/: StateMachine.qml  ToolBar.qml
src/qml/ui/: CircularGauge.qml  CircularProgressBar.qml
src/qml/utils/: ThemeCircularPaletteReveal.qml
src/qml/widgets/: FileDialog.qml  PowerSwitchStatus.qml
src/rust/gps/: Cargo.toml
src/rust/gps/src/: coordinate.rs  ffi.rs  http_location.rs  lib.rs  logger.rs  network.rs  prelude.rs
src/utility/: checksum.hh  memory.hh
tests/: CMakeLists.txt  include.h  test-image-metadata.cc  test-imagemetadata-exif.cc
(+21 files in other folders)
