[package]
name = "quasar_gps"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.79"
thread_local = "1.1.7"
log = "0.4.20"
flexi_logger = "0.27.3"

geolocation = "0.2.1"
local-ip-address = "0.5.6"
public-ip = { version = "0.2.2", features = ["http-resolver"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "fs", "macros"] }
